--- a/Offline 3/1805067 Offline 3/.vscode/settings.json
+++ b/Offline 3/1805067 Offline 3/.vscode/settings.json
@@ -2,7 +2,6 @@
     "files.associations": {
         "*.tcc": "cpp",
         "string": "cpp",
-        "string_view": "cpp",
-        "iostream": "cpp"
+        "string_view": "cpp"
     }
 }
